--- a/app/.env.example
+++ b/app/.env.example
@@ -1,3 +1,4 @@
 MONGODB_URI="mongodb_uri"
 DB_NAME="db_name"
 CELERY_BROKER_URL="amqp://user:password@rabbitmq:5672/"
+API_URL="http://localhost:8080"
