feat(api): Add user authentication

--- a/app/.env.example
+++ b/app/.env.example
@@ -2,3 +2,6 @@ MONGODB_URI="mongodb_uri"
 DB_NAME="db_name"
 CELERY_BROKER_URL="amqp://user:password@rabbitmq:5672/"
 API_URL="http://localhost:8080"
+DEFAULT_ALGORITHM="HS256"
+EXPIRES_DELTA=30
+SECRET_KEY="your_secret_key"
