feat(ui): Add React project structure

--- a/app/infra/compose/compose.yaml
+++ b/app/infra/compose/compose.yaml
@@ -34,3 +34,14 @@ services:
       - ../../.env
     depends_on:
       - rabbitmq
+
+  ui:
+    build:
+      context: ../../..
+      dockerfile: app/services/ui/Dockerfile
+    ports:
+      - "80:80"
+    depends_on:
+      - api
+    env_file:
+      - ../../.env
