--- a/app/services/ui/package.json
+++ b/app/services/ui/package.json
@@ -13,6 +13,7 @@
     "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
     "next-themes": "^0.4.6",
     "react": "^19.2.0",
